fix: routing 순환참조 해결
- 근데 product dto에서 client -> employee -> department -> employee 순환참조
- 그래서 product dto 에서 id code name만 참조하게 바꾸는데
- 이러다가 날 샐 거 같다